2016-09-15  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.13.92 release.

        * gtk/NEWS: Add release notes for 2.13.92.

2016-09-14  Carlos Garnacho  <carlosg@gnome.org>

        [GTK][Wayland] Implement clipboard support
        https://bugs.webkit.org/show_bug.cgi?id=146574

        Reviewed by Carlos Garcia Campos.

        Add the necessary plumbing for the GTK+ backend to use the
        PlatformPasteboard in WebCore. All selection data is transmitted
        at once through the serialization of PasteboardContentGtk/DataObjectGtk.

        * PlatformGTK.cmake: Add PasteboardContentGtk.cpp and
        WebPasteboardProxyGtk.cpp
        * Shared/gtk/ArgumentCodersGtk.cpp:
        (IPC::encode):
        (IPC::decode): Renamed from encodeDataObject/decodeDataObject
        and made public.
        (IPC::ArgumentCoder<DragData>::encode):
        (IPC::ArgumentCoder<DragData>::decode): Update DataObjectGtk
        encode/decode callers. Encode the extra canSmartReplace field.
        * Shared/gtk/ArgumentCodersGtk.h: Expose encode/decode methods for
        DataObjectGtk.
        * Shared/gtk/PasteboardContent.cpp: Added. Wraps a DataObjectGtk
        so it can be serialized on WebProcess/UIProcess messaging.
        (WebKit::PasteboardContent::PasteboardContent):
        (WebKit::PasteboardContent::encode):
        (WebKit::PasteboardContent::decode): Methods to encode/decode a
        PasteboardContent.
        * Shared/gtk/PasteboardContent.h: Added.
        * UIProcess/WebFrameProxy.cpp:
        (WebKit::WebFrameProxy::collapseSelection): Added plumbing to allow
        collapsing the global selection from the UI process side.
        * UIProcess/WebFrameProxy.h:
        * UIProcess/WebPasteboardProxy.h:
        * UIProcess/WebPasteboardProxy.messages.in: Added plumbing for the
        GTK+ pasteboard proxy functions.
        * UIProcess/gtk/WebPageProxyGtk.cpp: